--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,17 @@
             <artifactId>gson</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bowergithub.eligrey</groupId>
+            <artifactId>filesaver.js</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 
-
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>github-com-tsayen-dom-to-image</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
